--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.28)
 project(Acetza)
 include(FindPkgConfig)
 pkg_check_modules(SNDFILE REQUIRED sndfile>=1.2.2)
-file(GLOB_RECURSE SOURCES "source/*.c")
+file(GLOB_RECURSE SOURCES "muza/source/*.c")
 add_executable(muza ${SOURCES})
 set_property(TARGET muza PROPERTY COMPILE_WARNING_AS_ERROR ON)
 set_property(TARGET muza PROPERTY C_STANDARD 23)
@@ -11,5 +11,5 @@ target_compile_options(muza PRIVATE ${SNDFILE_CFLAGS} ${SNDFILE_CFLAGS_OTHER})
 target_compile_options(muza PRIVATE -Wall -Wextra -Wpedantic -Wfatal-errors)
 target_link_options(muza PRIVATE ${SNDFILE_LDFLAGS} ${SNDFILE_LDFLAGS_OTHER})
 target_link_directories(muza PRIVATE ${SNDFILE_LIBRARY_DIRS})
-target_include_directories(muza PRIVATE "include")
+target_include_directories(muza PRIVATE "muza/include")
 target_link_libraries(muza m ${SNDFILE_LIBRARIES} ${SNDFILE_LINK_LIBRARIES})
