--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,4 @@ target_compile_options(muza PRIVATE -Wall -Wextra -Wpedantic -Wfatal-errors)
 target_link_options(muza PRIVATE ${SNDFILE_LDFLAGS} ${SNDFILE_LDFLAGS_OTHER})
 target_link_directories(muza PRIVATE ${SNDFILE_LIBRARY_DIRS})
 target_include_directories(muza PRIVATE "muza/include")
-target_link_libraries(muza m ${SNDFILE_LIBRARIES} ${SNDFILE_LINK_LIBRARIES})
+target_link_libraries(muza m gmp)
